fix: Ensure ISO logo & copyright don’t wrap
[awkwardly] on narrower viewports

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -63,7 +63,7 @@ body {
     padding-top: 1em;
 
     .logo {
-      width: $logoOffset;
+      width: $footerLogoSize + 12px;
       margin-left: 0;
       display: inline-block;
 
